--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>DarielWebsite</title>
     </head>
 
-    <body style="color:white">
+    <body style="color:black">
         <h1 style="text-align: center;"><br><br> MAY SASABIHIN AKO SAYO </h1>
         <a href="2ndpage.html" target="_blank">Click this para malaman mo kung ano ang sasabihin ko!</a>
     </body>
